src/css/style.css
:root {
  /* Font-Colors */
  --font-comment: #1b998b;
  --font-class: #e17400;
  --font-itemTitle: #d62828;
  --font-this: #d62828;
  --font-period: #e17400;
  --font-equal: #fe7f2d;
  --font-text-light: #e0e1dd;
  --font-string: #1b998b;
  --font-important: #d62828;
  /* List item colors */
  --item-border-left: #778da9;
  /* Background colors */
  /* --background-light: #415a77; */
  --background-light: #0d1b2a;
  --background-mid: #1b263b;
  --background-dark: #0d1b2a;
  --boxshadow-dark: rgba(13, 27, 42, 0.75);
  /* List title colors */
  --list-title-bottom-border: #e0e1dd;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100vh;
  width: 100vw;
  /* overflow: hidden; */
}

body {
  font-size: 16px;
  font-family: "Fira Sans", sans-serif;
  line-height: 2;
  background-color: var(--background-dark);
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

#main {
  height: inherit;
  width: inherit;
}

p {
  margin: 0 0.5em;
}

/* Input styles */

input {
  background-color: var(--background-dark);
  box-shadow: inset 0px 0px 2px 0px var(--font-important);
  border: 1px solid var(--background-light);
  border-radius: 5px;
  padding: 0 5px 0 5px;
  color: var(--font-text-light);
  margin-right: 0.25em;
  font: inherit;
  box-sizing: border-box;
}

input:valid {
  background-color: var(--background-dark);
}

input:invalid {
  color: red;
  text-decoration: line-through;
}

/* Select styles */

select {
  background-color: var(--barkground-dark);
  border: 1px solid var(--background-light);
  box-shadow: inset 0px 0px 2px 0px var(--font-important);
  border-radius: 5px;
  padding: 5px 5px 5px 5px;
  color: var(--font-text-light);
  cursor: pointer;
}

[value~="paid"] {
  background-color: var(--background-dark);
  color: var(--font-important);
}

[value~="free"] {
  background-color: var(--background-dark);
  color: var(--font-text-light);
}

/* Color styles */

.item-text {
  color: var(--font-text-light);
  font-style: normal;
}

.item-comment {
  color: var(--font-comment);
  font-style: italic;
}

.item-class {
  color: var(--font-class);
  font-style: italic;
}

.item-title {
  color: var(--font-itemTitle);
  font-style: normal;
}

.item-this {
  color: var(--font-this);
}

.item-period {
  color: var(--font-period);
}

.item-equal {
  color: var(--font-equal);
}

.item-string {
  color: var(--font-string);
}

.item-link {
  color: var(--font-string);
}

.item-number {
  color: var(--font-important);
}

/* Button styles*/

.syntax-btn {
  cursor: pointer;
  border: none;
  font: inherit;
  font-size: 1em;
  background-color: var(--background-dark);
  color: var(--font-text-light);
}

/* Login Buttons */
.syntax-btn.user-login-btns {
  background-color: var(--background-mid);
  color: var(--font-text-light);
  margin: 0 25% 20px 25%;
  border-radius: 5px;
  transition: background-color 0.25s ease-in, color 0.25s ease-in;
}

.syntax-btn.user-login-btns:hover {
  background: var(--font-class);
  color: var(--background-dark);
  font-weight: 700;
}

.syntax-btn.user-login-btns:focus {
  outline: var(--font-class) auto 5px;
}

.edit-list-btn {
  grid-column: 2 / 3;
  background-color: var(--background-dark);
  border: none;
  border-bottom: 2px solid var(--font-class);
}

.edit-item-btn {
  margin: 0;
  background-color: var(--background-dark);
  border: none;
  cursor: pointer;
}

.cog {
  fill: var(--font-text-light);
  transition: fill 0.25s linear;
}

.cog:hover {
  fill: var(--font-class);
}

.cog:focus {
  fill: var(--font-comment);
  outline: var(--font-comment) auto 5px;
}

.edit-list-btn svg {
  max-width: 20px;
  max-height: 20px;
}

.vote-btn {
  cursor: pointer;
  border: none;
  font-size: 1em;
  text-align: left;
  background-color: var(--background-dark);
  color: var(--font-text-light);
  padding: 0;
  transition: font-size 0.5s ease-in-out;
}

.vote-btn:hover {
  font-size: 1.2em;
}

.vote-btn:focus {
  /* outline: var(--font-class) solid 5px; */
  outline: none;
  box-shadow: inset 0 0 1px 0 var(--font-important);
  border-radius: 5px;
  padding-left: 5px;
}

.header-user-loggedin button {
  background-color: var(--background-mid);
  border-bottom: 1px solid var(--background-mid);
  transition: border-bottom 0.5s ease-in-out;
}

.header-user-loggedin button:hover,
.header-user-loggedin button:focus {
  border-bottom: 1px solid var(--font-class);
  /* Might have a scope issue here? */
  font-size: 1em !important;
}

.header-user-loggedin button:focus {
  outline: none;
}

.header-user button {
  background-color: var(--background-mid);
  border-bottom: 1px solid var(--background-mid);
  transition: border-bottom 0.5s ease-in-out;
}

.header-user button:hover,
.header-user button:focus {
  border-bottom: 1px solid var(--font-class);
  /* Might have a scope issue here? */
  font-size: 1em !important;
}

.header-user button:focus {
  outline: none;
}

/* Sidebar button */
.sidebar-list-button {
  padding: 5px 0 5px 15px;
  max-width: 90%;
  text-align: left;
  cursor: pointer;
  border: none;
  font: inherit;
  font-size: 0.9em;
  background-color: var(--background-mid);
  color: var(--font-text-light);
}

.sidebar-list-button:hover,
.sidebar-list-button:focus {
  color: var(--font-class);
}

.sidebar-list-button:focus {
  outline: none;
}

.sidebar-list-button.selected {
  color: var(--font-class);
}

/* Add list button */
.add-list-form button {
  transition: color 0.25s ease-in;
  animation: colorChange 5s linear 5s alternate infinite none running;
}

.add-list-form button:hover {
  color: var(--font-class);
}

.add-list-form button:focus {
  outline: var(--font-class) auto 5px;
}

/* Add to list button */
.add-listitem-div button {
  transition: color 0.25s ease-in;
  animation: colorChange 5s linear 5s normal infinite none running;
  text-align: left;
  padding: 0;
}

.add-listitem-div button:hover {
  color: var(--font-class);
}

.add-listitem-div button:focus {
  outline: var(--font-class) auto 5px;
}
/* ... */

